--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@vitest/browser": "^1.5.0",
     "@vitest/utils": "^1.5.0",
     "diff-sequences": "^29.6.3",
+    "glob": "^11.0.2",
     "lerna": "^8.1.2",
     "lit": "^3.1.2",
+    "minimatch": "^10.0.1",
     "nx": "^18.2.4",
     "prettier": "^2.6.2",
-    "rimraf": "^5.0.5",
+    "rimraf": "^6.0.1",
     "storybook": "7.6.17",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
