--- a/.github/workflows/commitlint.yaml
+++ b/.github/workflows/commitlint.yaml
@@ -9,24 +9,21 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Install required dependencies
-        run: |
-          sudo apt update
-          sudo apt-get install -y git curl
-          curl -fsSL https://deb.nodesource.com/setup_22.x -o nodesource_setup.sh
-          sudo -E bash nodesource_setup.sh
-          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y nodejs
+      - name: Set up Node.js 22
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'npm'
       - name: Print versions
         run: |
-          git --version
           node --version
           npm --version
-          npx commitlint --version
-      - name: Install commitlint
+      - name: Install commitlint and dependencies
         run: |
           npm install conventional-changelog-conventionalcommits
           npm install commitlint@latest
-
+      - name: Print commitlint version
+        run: npx commitlint --version
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
         run: npx commitlint --last --verbose
