--- a/.github/workflows/commitlint.yaml
+++ b/.github/workflows/commitlint.yaml
@@ -4,26 +4,29 @@ on: [push, pull_request]
 
 jobs:
   commitlint:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Set up Node.js 22
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: 'npm'
+      - name: Install required dependencies
+        run: |
+          sudo apt update
+          sudo apt-get install -y git curl
+          curl -fsSL https://deb.nodesource.com/setup_22.x -o nodesource_setup.sh
+          sudo -E bash nodesource_setup.sh
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y nodejs
       - name: Print versions
         run: |
+          git --version
           node --version
           npm --version
-      - name: Install commitlint and dependencies
+          npx commitlint --version
+      - name: Install commitlint
         run: |
           npm install conventional-changelog-conventionalcommits
           npm install commitlint@latest
-      - name: Print commitlint version
-        run: npx commitlint --version
+
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
         run: npx commitlint --last --verbose
