--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -50,6 +50,10 @@ jobs:
         run: |
           npm ci
 
+      - name: Run commitlint
+        run: |
+          npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+
       - name: Lint packages
         run: |
           npm run lint
