--- a/package.json
+++ b/package.json
@@ -17,35 +17,37 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@nx/js": "18.2.4",
-    "@nx/storybook": "^18.2.4",
-    "@nx/vite": "18.2.4",
-    "@nx/web": "18.2.4",
-    "@storybook/addon-essentials": "7.6.17",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/core-server": "7.6.17",
-    "@storybook/jest": "^0.2.3",
-    "@storybook/test-runner": "^0.13.0",
-    "@storybook/testing-library": "^0.2.2",
-    "@storybook/web-components-vite": "7.6.17",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@nx/js": "21.0.0",
+    "@nx/storybook": "21.0.0",
+    "@nx/vite": "21.0.0",
+    "@nx/web": "21.0.0",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-interactions": "^8.6.12",
+    "@storybook/core-server": "^8.6.12",
+    "@storybook/test": "^8.6.12",
+    "@storybook/test-runner": "^0.22.0",
+    "@storybook/web-components-vite": "^8.6.12",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.29",
+    "@swc/helpers": "0.5.17",
     "@swc/types": "^0.1.6",
     "@types/node": "^20.12.7",
     "@vitest/browser": "^1.5.0",
     "@vitest/utils": "^1.5.0",
     "diff-sequences": "^29.6.3",
-    "lerna": "^8.1.2",
+    "glob": "^11.0.2",
+    "lerna": "^8.2.2",
     "lit": "^3.1.2",
-    "nx": "^18.2.4",
+    "minimatch": "^10.0.1",
+    "nx": "21.0.0",
     "prettier": "^2.6.2",
-    "rimraf": "^5.0.5",
-    "storybook": "7.6.17",
+    "rimraf": "^6.0.1",
+    "storybook": "^8.6.12",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "^5.4.5",
-    "vite": "~5.0.0",
+    "vite": "6.0.0",
     "vitest": "^1.5.0"
   },
   "repository": {
